Feat: Add candidate route
